refactor: rename project to "view-transition-demo" and update dependencies
feat: add CodeExample component for displaying code snippets

fix: remove outline from SlideList component

feat: integrate Link from react-router in SlideWrapper for navigation

feat: enhance slide navigation with additional routes

style: add custom animations for view transitions in CSS

feat: update route tree to include new routes and remove deprecated ones

feat: implement Demos routes with interactive animations

feat: create Hurdles route to discuss challenges faced

fix: update TechStack route to reflect current technologies

feat: add ThankYou route with QR code for feedback

feat: enhance ViewTransitions and ViewTransitions2 routes with examples

feat: implement ViewTransitionsInReact route showcasing router integration

chore: comment out router devtools for cleaner UI

style: adjust logo size and footer layout in index route

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "viewtransitiondemo",
+  "name": "view-transition-demo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,8 +14,9 @@
     "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-router": "^1.120.3",
     "@tanstack/react-router-devtools": "^1.120.3",
-    "react": "^0.0.0-experimental-4a45ba92-20250515",
-    "react-dom": "^0.0.0-experimental-4a45ba92-20250515",
+    "qrcode.react": "^4.2.0",
+    "react": "^0.0.0-experimental-c4676e72-20250520",
+    "react-dom": "^0.0.0-experimental-c4676e72-20250520",
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.6"
   },
